# agentic-adoption-scan

./: .goreleaser.yml  .release-please-manifest.json  CHANGELOG.md  LICENSE.md  README.md  create-impact-labels.sh  pyproject.toml  record-deployment.sh  release-please-config.json
.claude/scripts/: setup-gh.sh
.github/workflows/: impact_label_check.yml  pr-checks.yml  pr-connect-deploy.yml  pr-evals.yml  pr-title.yml  publish.yml  release.yml
agentic-adoption-scan/: .gitignore  cache.go  compact.go  config.go  config_test.go  github.go  go.mod  go.sum  indicators.go  indicators_test.go  inspect.go  main.go  mcpserver.go  mcpserver_test.go  output.go  parquet.go  scanner.go  storage.go
agentic-adoption-scan/_local_deps/klauspost-compress/gzip/: gzip.go
agentic-adoption-scan/_local_deps/klauspost-compress/snappy/: snappy.go
agentic-adoption-scan/_local_deps/klauspost-compress/zstd/: zstd.go
agentic-adoption-scan/_local_deps/pierrec-lz4v4/: go.mod  lz4.go
connect/: requirements.txt  server.py
evals/: README.md
evals/connect/: conftest.py  pyproject.toml  test_connect_deploy.py
evals/inspect/: mcp_eval_tasks.py  pyproject.toml
evals/inspect/datasets/: list_indicators_fixture.json
plans/: agentic-adoption-scan.md  parquet-caching-design.md
