[build-system]
requires = ["uv_build>=0.6.0,<0.11.0"]
build-backend = "uv_build"

[project]
name = "connect-deploy-tests"
version = "0.1.0"
description = "Deployment tests that prove the MCP server works on Posit Connect"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0",
    "httpx>=0.27",
    "mcp>=1.0",
    "rsconnect-python>=1.24",
]

[tool.pytest.ini_options]
testpaths = ["."]
markers = [
    "connect: tests that require a running Posit Connect instance",
]
