[project]
name = "mcp-evals"
version = "0.1.0"
description = "Inspect AI evals for the agentic-adoption-scan MCP server"
requires-python = ">=3.11"
dependencies = [
    "inspect-ai>=0.3",
    "mcp>=1.0",
    "httpx>=0.27",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]
